--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ background-color: rgba(0, 0, 0, 0.863);
     background-size: cover;
 }
 .header{
+    border-radius: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
